build: 更改为使用idea Ultimate作为调试ide